--- a/index.html
+++ b/index.html
@@ -269,23 +269,23 @@
               Narrow AI or Also Known As ANI
               <p>
                 Narrow AI is any kind of artificial intelligence system and/or
-                form of AI technology that's sole purpose is to complete a set
+                form of AI technology whose sole purpose is to complete a set
                 of very specific actions or basic commands. While ANI's are
-                created with the intended goal in mind of serving and exceling
+                created with the intended goal in mind of serving and excelling
                 in a cognitive capability, this particular sub-category of AI
                 technologies still aren't able to independently learn new skills
-                that it's not already programmed and/or wasn't intially designed
-                to learn. These kind of technologies are developed by combining
-                a subfield of artifical intelligence called "machine learning"
-                with neural network algorithms to fucntion properly and
-                accomplish the specificed tasks it's programmed to complete.
+                that it's not already programmed and/or wasn't initially designed
+                to learn. This kind of AI technology is developed by combining
+                a subfield of artificial intelligence called "machine learning"
+                with neural network algorithms to function properly and
+                accomplish the specified tasks it's programmed to complete.
                 Through machine learning, AI systems are provided with the
                 ability to process data and statistics, while simultaneously
-                applying problem-solving strategies that are similar to that of
-                strategies used by actual people, like that of trail and error,
-                to improve it's own processes and "think" at faster rates.
+                applying problem-solving strategies that are similar to 
+                strategies used by actual people, like that of trial and error,
+                to improve its own processes and "think" at faster rates.
                 Examples of such A.I. include image recognition software,
-                self-driving cars, and AI virtual assistants.
+                self-driving cars, and AI virtual assistants.           
               </p>
             </h2>
           </il>
@@ -293,14 +293,14 @@
             <h3>
               Artifical Genral Intelligence (AGI)
               <p>
-                Artificial General Intelligence and/or general AI is any form of
+                 Artificial General Intelligence and/or general AI is any form of
                 artificial intelligence that's capacity for thinking, learning,
-                and preforming more closely resembles that of a real person, as
-                it's able to preform more divesive and detailed
-                directions/tasks. While AGI's are still a working progress, the
+                and performing more closely resembles that of a real person, as
+                it's able to perform more divisive and detailed
+                directions/tasks. While AGIs are still a work in progress, the
                 fundamental framework for this type of AI may be constructed
                 from technologies such as supercomputers, quantum hardware and
-                generative AI models like that of ChatGPT.
+                generative AI models like that of ChatGPT.              
               </p>
             </h3>
           </il>
@@ -309,17 +309,17 @@
               Artificial Superintelligence
               <p>
                 Artificial Superintelligence and/or super AI is more of a
-                figment of the imgaination and is showcased through numerous
-                science fiction movies like that of The Termninator and Machina.
-                It's the infamously known theroy that artificial intelligence
-                will become significantly more knowledgable and efficient than
+                a figment of the imagination and is showcased through numerous
+                science fiction movies like that of The Terminator and Machina.
+                It's the infamously known theory that artificial intelligence
+                will become significantly more knowledgeable and efficient than
                 humans, eventually becoming the backbone of another sub-genre of
                 AI called self-aware AI and other individualistic, robotic
                 projects. As CEO of the AI writing company, Jasper, Dave
                 Rogenmoser once said himself,"Artificial superintelligence will
                 become by far the most capable forms of intelligence on
                 earth.... It will have the intelligence of human beings and will
-                be exceedingly better at everything that we do."
+                be exceedingly better at everything that we do."              
               </p>
             </h4>
           </il>
@@ -327,17 +327,17 @@
             <h5>
               Reactive Machine AI
               <p>
-                While reactive machine AI's are the most fundemntal type of AI
+                While reactive machine AI's are the most fundamental type of AI
                 and can respond to immediate requests/tasks, the technology is
                 greatly limited in terms of storing memory, learning from past
-                experiences and absed on that learning ehancing one's own
+                experiences and based on that learning enhancing one's own
                 efficiency and responding to combinations of inputs.
                 Additionally, reactive machine AI's also come in handy when
-                mainly preforming autonomous functions, such as filtering spam
-                from email box's and recommending items to online shoppers based
+                mainly performing autonomous functions, such as filtering spam
+                from email boxes and recommending items to online shoppers based
                 off of their personal shopping history. An example of such would
-                be the reactive AI machine Deep Blue, whihc in 1997 beat
-                grandmaster Garry Kasparov in a game of chess.
+                be the reactive AI machine Deep Blue, which in 1997 beat
+                grandmaster Garry Kasparov in a game of chess.  
               </p>
             </h5>
           </il>
@@ -345,16 +345,16 @@
             <h6>
               Limited Memory AI
               <p>
-                The expertises of limited memory AI can be found in it's ability
-                to store previously retrieved data and then anazlye it to make
+                The expertise of limited memory AI can be found in it's ability
+                to store previously retrieved data and then analyze it to make
                 predictions Limited memory AI heavily depends on a sub-set of
-                machine learning that's called "deep learning" which operates
-                simiarily to that of neurons inside the human brain. Through,
-                such the machine is able to provess data from experiences and
-                "learn" from them, iincreasing it's own accuracy and overall,
+                machine learning is called "deep learning" which operates
+                similarly to that of neurons inside the human brain. Through,
+                such the machine can process data from experiences and
+                "learn" from them, increasing it's accuracy and overall,
                 functionality. The impact of this kind of AI can be seen from
                 the sheer fact that a majority of today's AI applications are
-                derived from the limited memeory model and range from chatbots
+                derived from the limited memory model and range from chatbots
                 and virtual assistants to self-driving cars that constantly
                 observe and process environmental data around them while driving
                 on roads.
@@ -367,7 +367,7 @@
               <p>
                 Theory of Mind AI refers to the concept of artificial
                 intelligence being able to comprehend and notice the emotional
-                state of others around them. This theory of AI, in particular,
+                state of others around it. This theory of AI, in particular,
                 has prompted a series of (both) worrisome but yet realistic
                 concerns to be asked about the possibility of technology in
                 replacing human beings in the labor force and the high
@@ -375,19 +375,18 @@
                 especially within the beginning stages of the process. However,
                 there are also positive benefits that can come from such an
                 achievement in tech, as it would be a substantial milestone in
-                AI development and might even lead to the eventually enhancement
+                AI development and might even lead to the eventual enhancement
                 of other, pre-existing technologies we already have around us.
                 For instance, a senior AI researcher at the insurance company
                 of, Acrisure, has already provided an example of how this kind
                 of technology could revolutionize the AI vehicles of
-                self-driving cars as, "A self-driving car may perform better
+                self-driving cars as "A self-driving car may perform better
                 than a human driver the majority of the time because it doesn't
                 make the same human errors. But if you, as a driver, know that
                 your neighbor's kid tends to play close to the street after
                 school you'll know instinctively to slow down while passing that
                 neighbor's driveway - something an AI vehicle equipped with
-                basic limited memory wouldn't be able to do (Betz, 2024).
-              </p>
+                basic limited memory wouldn't be able to do (Betz, 2024).              </p>
             </h7>
           </il>
           <il>
