--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="./js/nodes.js"></script>
-    <script type="text/javascript" src="./js/tracery.js" defer></script>
     <script type="text/javascript" src="./js/index.js" defer></script>
     <script type="text/javascript" src="./js/timeline.js"></script>
   </head>
@@ -260,13 +259,12 @@
     <!--Dividing section-->
     <div id="types-container">
       <div class="divide-bar">
-        <h1>The 7 Main Types of Artifical Intelligence</h1>
+        <h1>The 7 Main Types of Artificial Intelligence</h1>
       </div>
       <div class="sub-title">
         <ul>
           <il>
-            <h2>
-              Narrow AI or Also Known As ANI
+            <h2>Narrow AI (AKA ANI)</h2>
               <p>
                 Narrow AI is any kind of artificial intelligence system and/or
                 form of AI technology whose sole purpose is to complete a set
@@ -287,11 +285,9 @@
                 Examples of such A.I. include image recognition software,
                 self-driving cars, and AI virtual assistants.           
               </p>
-            </h2>
           </il>
           <il>
-            <h3>
-              Artifical Genral Intelligence (AGI)
+            <h2>Artificial General Intelligence (AGI)</h2>
               <p>
                  Artificial General Intelligence and/or general AI is any form of
                 artificial intelligence that's capacity for thinking, learning,
@@ -302,11 +298,9 @@
                 from technologies such as supercomputers, quantum hardware and
                 generative AI models like that of ChatGPT.              
               </p>
-            </h3>
           </il>
           <il>
-            <h4>
-              Artificial Superintelligence
+            <h2>Artificial Superintelligence</h2>
               <p>
                 Artificial Superintelligence and/or super AI is more of a
                 a figment of the imagination and is showcased through numerous
@@ -321,11 +315,9 @@
                 earth.... It will have the intelligence of human beings and will
                 be exceedingly better at everything that we do."              
               </p>
-            </h4>
           </il>
           <il>
-            <h5>
-              Reactive Machine AI
+            <h2>Reactive Machine AI</h2>
               <p>
                 While reactive machine AI's are the most fundamental type of AI
                 and can respond to immediate requests/tasks, the technology is
@@ -339,11 +331,9 @@
                 be the reactive AI machine Deep Blue, which in 1997 beat
                 grandmaster Garry Kasparov in a game of chess.  
               </p>
-            </h5>
           </il>
           <il>
-            <h6>
-              Limited Memory AI
+            <h2>Limited Memory AI</h2>
               <p>
                 The expertise of limited memory AI can be found in it's ability
                 to store previously retrieved data and then analyze it to make
@@ -359,11 +349,9 @@
                 observe and process environmental data around them while driving
                 on roads.
               </p>
-            </h6>
           </il>
           <il>
-            <h7
-              Theory of Mind AI
+            <h2> Theory of Mind AI</h2>
               <p>
                 Theory of Mind AI refers to the concept of artificial
                 intelligence being able to comprehend and notice the emotional
@@ -386,12 +374,10 @@
                 your neighbor's kid tends to play close to the street after
                 school you'll know instinctively to slow down while passing that
                 neighbor's driveway - something an AI vehicle equipped with
-                basic limited memory wouldn't be able to do (Betz, 2024).              </p>
-            </h7>
+                basic limited memory wouldn't be able to do (Betz, 2024).</p>
           </il>
           <il>
-            <h8
-              Self-Aware AI
+            <h2>Self-Aware AI</h2>
               <p>
                 Self-Aware AI describes any kind of artificial intelligence that
                 possesses self-awareness. It's one of the ultimate goals in AI
@@ -401,7 +387,6 @@
                 human emotion and analyze it but will be capable of having a
                 sense of self, as well.
               </p>
-            </h8>
           </il>
         </ul>
       </div>
